--- a/Trab4/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
+++ b/Trab4/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
@@ -62,4 +62,9 @@
       <Filter>Header Files</Filter>
     </Library>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Tabelas\IdTiposEspaco.def">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
