--- a/Trab4/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/Trab4/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -170,6 +170,9 @@
   <ItemGroup>
     <Library Include="..\..\ArcaboucoTeste.lib" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Tabelas\IdTiposEspaco.def" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
